deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mood
  labels:
    app: mood
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mood
  template:
    metadata:
      labels:
        app: mood
    spec:
      containers:
      - name: mood
        image: nmood
        ports:
        - containerPort: 3000
