loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mood-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mood
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
