mood-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mood-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mood.chooyee.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mood-service
                port:
                  number: 3000
